# Design-Pattern

./: .gitignore  README.md  asm1Rag.py  course-desc.jsonl  pyproject.toml
.chroma_course_desc/: chroma.sqlite3
